--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
+    "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "paths": {
-      "@app/*": ["src/app/*"],
-      "@model/*":["src/model/*"]
-    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
